--- a/Editor/Lunha.DevKit.Editor.asmdef
+++ b/Editor/Lunha.DevKit.Editor.asmdef
@@ -1,16 +1,16 @@
-﻿{
-  "name": "Lunha.DevKit.Editor",
-  "rootNamespace": "Lunha.DevKit.Editor",
-  "references": [],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": false,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+{
+    "name": "Lunha.DevKit.Editor",
+    "rootNamespace": "Lunha.DevKit",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
