--- a/Runtime/Lunha.DevKit.Runtime.asmdef
+++ b/Runtime/Lunha.DevKit.Runtime.asmdef
@@ -1,14 +1,14 @@
-﻿{
-  "name": "Lunha.DevKit.Runtime",
-  "rootNamespace": "Lunha.DevKit.Runtime",
-  "references": [],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": false,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+{
+    "name": "Lunha.DevKit.Runtime",
+    "rootNamespace": "Lunha.DevKit",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
