--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.lunha-dev-kit",
   "version": "0.0.2",
-  "description": "",
+  "description": "C# extensions & utilities",
   "displayName": "Lunha - Dev Kit",
   "unity": "2022.3",
   "author": {
