--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ylunha/com.lunha-dev-kit",
+  "name": "com.lunha-dev-kit",
   "version": "0.0.5",
   "description": "C# extensions & utilities",
   "displayName": "Lunha - Dev Kit",
