feat: Cinemachine v.6 support;

--- a/Runtime/Lunha.DevKit.Runtime.asmdef
+++ b/Runtime/Lunha.DevKit.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Lunha.DevKit.Runtime",
+    "rootNamespace": "",
     "references": [
-        "Cinemachine"
+        "Cinemachine",
+        "Unity.Cinemachine"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
